meta description, fonts

--- a/public/index.html
+++ b/public/index.html
@@ -2,13 +2,11 @@
 <html lang="en">
 
 <head>
-  <title>Keeper App</title>
+  <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link font-family: "Montserrat" , sans-serif;
-    href="https://fonts.googleapis.com/css?family=McLaren|Montserrat&display=swap" rel="stylesheet" />
-  <link id="external-css" rel="stylesheet" type="text/css"
-    href="https://fonts.googleapis.com/css?family=Montserrat&amp;display=swap" media="all">
+  <meta name="description" content="App de criação de notas desenvolvido em React">
   <link rel="stylesheet" href="styles.css" />
+  <title>Keeper App</title>
 </head>
 
 <body>
